Modified the function to support Java version 16 and above for multi select dropdown util